<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/QuestionActivityId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.Activities.QuestionActivity">

    <TextView
        android:id="@+id/questitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:text="Question"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/quesImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="100dp"
        android:gravity="center"></ImageView>

    <LinearLayout
        android:id="@+id/ly1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnop1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Op1"
            android:textAlignment="center"></Button>

        <Button
            android:id="@+id/btnop2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Op2"
            android:textAlignment="center"></Button>

        <Button
            android:id="@+id/btnop3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Op3"
            android:textAlignment="center"></Button>

        <Button
            android:id="@+id/btnop4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Op4"
            android:textAlignment="center"></Button>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/ly2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ly1"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/scoreTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center"
            android:text="Score:" />

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center"
            android:text="0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ly2"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/allQuesTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center"
            android:text="Number of Ques:" />

        <TextView
            android:id="@+id/allQuesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center"
            android:text="0" />
    </LinearLayout>

</RelativeLayout>

